Removed Post.author field
